buildscript {
    repositories {
        maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
        mavenCentral()
    }
    dependencies {
        classpath 'org.spongepowered:mixingradle:0.7-SNAPSHOT'
    }
}

plugins {
    id 'eclipse'
    id 'idea'
    id 'net.minecraftforge.gradle' version '[6.0.16,6.2)'
    id 'com.github.johnrengelman.shadow' version '8.1.1'
    id 'java-library'
}

apply plugin: 'org.spongepowered.mixin'

group = mod_group_id
version = mod_version
jarJar.enable()
base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(17)
    modularity.inferModulePath = true
}
repositories {
    maven {
        name = "CurseMaven"
        url = "https://www.cursemaven.com"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://api.modrinth.com/maven"
        content { includeGroup "maven.modrinth" }
    }
    maven { url = 'https://maven.minecraftforge.net/' }
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url 'https://maven.aliyun.com/repository/public' }
    maven { url = 'https://jitpack.io' }
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots/' }
    maven { url = 'https://libraries.minecraft.net/' }
    maven {
        name = 'CodeMC-OcclusionCulling'
        url = 'https://ci.codemc.io/job/LogisticsCraft/job/OcclusionCulling/lastSuccessfulBuild/artifact/'
    }
    maven { url 'https://repo.codemc.io/repository/maven-public/' }
    mavenCentral()
}
minecraft {
    mappings channel: mapping_channel, version: mapping_version
    copyIdeResources = true
    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
    runs {
        configureEach {
            workingDirectory project.file('run')
            property 'forge.logging.markers', 'REGISTRIES'
            property 'forge.logging.console.level', 'debug'

            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }

        client {
            property 'forge.enabledGameTestNamespaces', mod_id
            jvmArgs += [
                    '--add-modules', 'jdk.incubator.foreign',
                    '--enable-preview',
                    '-Dforeign.restricted=permit'
            ]
        }

        server {
            property 'forge.enabledGameTestNamespaces', mod_id
            args '--nogui'
            jvmArgs += [
                    '--add-modules', 'jdk.incubator.foreign',
                    '--enable-preview',
                    '-Dforeign.restricted=permit'
            ]
        }
        gameTestServer {
            property 'forge.enabledGameTestNamespaces', mod_id
        }

        data {
            workingDirectory project.file('run-data')
            args '--mod', mod_id, '--all', '--output', file('src/generated/resources/'), '--existing', file('src/main/resources/')
        }
    }
}

mixin {
    add sourceSets.main, "graphene.refmap.json"
    config "graphene.mixins.json"
    config 'graphene.mixins.ae2wtlib.json'
}

sourceSets.main.resources { srcDir 'src/generated/resources' }

dependencies {
    minecraft 'net.minecraftforge:forge:1.20.1-47.4.0'

    implementation files('lib/cloth.jar')
    implementation files('lib/ae2wtlib.jar')
    implementation 'com.esotericsoftware:kryo:5.6.2'
    implementation 'org.joml:joml:1.10.5'
    implementation 'org.spongepowered:mixin:0.8.5'
    implementation "com.github.ben-manes.caffeine:caffeine:3.2.0"
    implementation(annotationProcessor("io.github.llamalad7:mixinextras-common:0.2.0"))
    implementation(jarJar("io.github.llamalad7:mixinextras-forge:0.2.0")) {
        jarJar.ranged(it, "[0.2.0,)")
    }
    implementation files('lib/1.jar')
    implementation "com.logisticscraft:occlusionculling:0.0.8-SNAPSHOT"

    jarJar("com.github.ben-manes.caffeine:caffeine:3.2.0") {
        jarJar.ranged(it, "[3.2.0,3.3.0)")
    }
    jarJar("com.logisticscraft:occlusionculling:0.0.8-SNAPSHOT") {
        jarJar.ranged(it, "[0.0.8,1.0.0)")
    }
    jarJar("com.esotericsoftware:kryo:5.6.2") {
        jarJar.ranged(it, "[0.0.1,6.0.0)")
    }
    compileOnly 'org.projectlombok:lombok:1.18.28'

    annotationProcessor 'org.projectlombok:lombok:1.18.28'
    annotationProcessor 'org.spongepowered:mixin:0.8.5:processor'
}

tasks.named('processResources', ProcessResources).configure {
    var replaceProperties = [minecraft_version   : minecraft_version, minecraft_version_range: minecraft_version_range,
                             forge_version       : forge_version, forge_version_range: forge_version_range,
                             loader_version_range: loader_version_range,
                             mod_id              : mod_id, mod_name: mod_name, mod_license: mod_license, mod_version: mod_version,
                             mod_authors         : mod_authors, mod_description: mod_description,]

    inputs.properties replaceProperties
    filesMatching(['META-INF/mods.toml', 'pack.mcmeta']) {
        expand replaceProperties + [project: project]
    }
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes(["Specification-Title"     : mod_id,
                    "Specification-Vendor"    : mod_authors,
                    "Specification-Version"   : "1", // We are version 1 of ourselves
                    "Implementation-Title"    : project.name,
                    "Implementation-Version"  : project.jar.archiveVersion,
                    "Implementation-Vendor"   : mod_authors,
                    "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                    "MixinConfigs": "${mod_id}.mixins.json,${mod_id}.mixins.ae2wtlib.json"
        ])
    }
    from {
        configurations.runtimeClasspath.collect {
            it.isDirectory() ? it : zipTree(it)
        }
    }

    exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
    duplicatesStrategy = 'exclude'
    from sourceSets.main.output
    include "**/${mod_id}.refmap.json"
    include "**/${mod_id}.mixins.json"
    include "**/${mod_id}.mixins.ae2wtlib.json"
    finalizedBy 'reobfJar'

}

tasks.withType(JavaCompile).configureEach {
    options.release = 17
    options.compilerArgs << "-Xlint:deprecation" << "-Xlint:unchecked" << "--add-modules" << "jdk.incubator.foreign"
    options.compilerArgs << "--enable-preview"
    options.encoding = 'UTF-8'
}
shadowJar {
    mergeServiceFiles()
    exclude 'META-INF/*.SF', 'META-INF/*.DSA', 'META-INF/*.RSA'
    relocate 'com.esotericsoftware', 'graphene.com.esotericsoftware'
    relocate 'com.logisticscraft', 'graphene.com.logisticscraft'
    relocate 'com.github.benmanes.caffeine', 'graphene.com.github.benmanes.caffeine'

}
jar {
    manifest.attributes([
            "MixinConfigs": "graphene.refmap.json,graphene.mixins.json"
    ])
}